tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/virtualservice/added_header/tproxy/to_tproxy/_test_context/VirtualService.1641089123.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-88348
spec:
  hosts:
  - tproxy
  http:
  - headers:
      request:
        add:
          istio-custom-header: user-defined-value
    route:
    - destination:
        host: tproxy
